<?xml version="1.0" encoding="utf-8"?>

<!--recipe details-->
<!--ScrollView has id, then rotation works correctly-->
<ScrollView
    android:id="@+id/detail_scroll_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.constraint.ConstraintLayout
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/general_margin_and_padding">
        <!--android:focusableInTouchMode="true"  to handle rotation, when RecyclerView is inside ScrollView-->

        <TextView
            android:id="@+id/recipe_title"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_margin_and_padding"
            android:layout_marginStart="@dimen/bigger_margin_and_padding"
            android:layout_marginTop="@dimen/general_margin_and_padding"
            android:fontFamily="sans-serif-condensed"
            android:textSize="40sp"
            android:textStyle="bold"
            tools:text="@string/recipe_name_muster_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/servings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/bigger_margin_and_padding"
            android:layout_marginTop="@dimen/general_margin_and_padding"
            android:textSize="24sp"
            android:text="@string/servings_title_muster_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

        <TextView
            android:id="@+id/servings"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/general_margin_and_padding"
            android:layout_marginTop="@dimen/general_margin_and_padding"
            android:textSize="24sp"
            tools:text="@string/servings_muster_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/servings_title"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

        <Button
            android:id="@+id/update_recipe_ingredients_widget_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/general_margin_and_padding"
            android:padding="@dimen/bigger_margin_and_padding"
            android:text="@string/add_to_widget_button"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipe_title" />

        <!--CardView for ingredients-->
        <android.support.v7.widget.CardView
            android:id="@+id/ingredients_CardView"
            android:layout_width="@dimen/zero_width"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/general_margin_and_padding"
            android:layout_marginStart="@dimen/general_margin_and_padding"
            android:layout_marginTop="@dimen/margin_top_cardview_ingredients"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/servings_title"
            android:nestedScrollingEnabled="true">

            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/ingredients_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/bigger_margin_and_padding"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    android:text="@string/ingredients_title"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <!--RecycleView for ingredients quantity, measure type and name-->
                <android.support.v7.widget.RecyclerView
                    android:id="@+id/ingredients_recyclerView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/bigger_margin_and_padding"
                    android:layout_marginStart="@dimen/bigger_margin_and_padding"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients_title">
                </android.support.v7.widget.RecyclerView>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>

        <!--RecyclerView for short step descriptions-->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/bigger_margin_and_padding"
            android:layout_marginStart="@dimen/bigger_margin_and_padding"
            android:layout_marginTop="@dimen/big_margin_and_padding"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredients_CardView" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>